--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				super(chunker, polisher, caller);
 		    }
 		    beforeParsed(content){
+		    	Prism.highlightAll();
 			    createToc({
 		    		content: content,
 
