--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				super(chunker, polisher, caller);
 		    }
 		    beforeParsed(content){
-		    	Prism.highlightAll();
+
 			    createToc({
 		    		content: content,
 
@@ -260,6 +260,7 @@ figcaption:not(.no-counter)::before {
 
 <div class="page-break"></div>
 <script src="prism-js/prism.js"></script>
+<script>hljs.highlightAll();</script>
 <script>
 	const math = document.getElementsByClassName("math");
  	MathJax.Hub.Queue(["Typeset",MathJax.Hub,math]);  
