--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			}
 			afterParsed(parsed) {
 				hljs.highlgtAll();
+				console.log("Hello World");
 			}
 		  }
 		  Paged.registerHandlers(handlers);
