--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		    	});
 			}
 			afterParsed(parsed) {
-				hljs.highlgtAll();
+				hljs.highlightAll();
 				console.log("Hello World");
 			}
 		  }
