--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
 <div class="cover-page">
 	<h1>Beautiful PDFs from HTML</h1>
-	<h3 class="no-counter cover-header">An Example Repo by Ashok Khanna</h3>
-	<h3 class="no-counter cover-header">March 2021</h3>
+	<h3 class="cover-header">An Example Repo by Ashok Khanna</h3>
+	<h3 class="cover-header">March 2021</h3>
 </div>
 
 <!-- As class "cover-page" uses a custom page rule,
