--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Beautiful PDFs from HTML</title>
 
  	<!-- MathJax Configuration Settings -->
+ 	<!--
 	  <script>
 	  window.MathJax = {
 	    loader: { load: ['[tex]/ams'] },
@@ -20,10 +21,11 @@
 	    "HTML-CSS": { fonts: ["STIX"] }
 	  }
 	  </script>
+	-->
   
-  <!-- Load MathJax for rendering Math. Configuration settings are above
-    Note we use MathJax 2.7.7 and not the latest because we want to customise our font to STIX -->
-  <script type="text/javascript" sync src="MathJax-2.7.7/MathJax.js"></script>
+  <!-- Load MathJax for rendering Math. Configuration settings are above Note we use MathJax 2.7.7 and not the latest because we want to customise our font to STIX -->
+  <!-- <script type="text/javascript" sync src="MathJax-2.7.7/MathJax.js"></script> -->
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="toc.js"></script>
 
@@ -253,10 +255,12 @@ figcaption:not(.no-counter)::before {
 </div>
 
 <div class="page-break"></div>
+<!-- MathJax Script
 <script>
 	const math = document.getElementsByClassName("math");
  	MathJax.Hub.Queue(["Typeset",MathJax.Hub,math]);  
 </script>
+-->
 </body>
 
 </html>
