--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <p class="footer">Most of this is copy/paste from paged.js</p>
 <div class="counter-reset"></div>
 
-<h2 class="no-break counter">Foreword</h2>
+<h2 class="no-break">Foreword</h2>
 <p>HTML and CSS are <b><i>beautiful</i></b> languages, and to me, one of the landmark achievements of collaboration and the open web. Together, they allow you to create beautifully typeset digital content that can be viewed on any device, without any special software or paid licenses.</p>
 <p>The world wide web, however, was designed for scrolling content, and not paginated media (by which I mean discrete pages like physical paper or virtually in pdf). There remains a place for paginated media, indeed there is something comforting and homely from a consistent layout of A4 (or US Letter), that, in my belief, reduces the cognitive tax when consuming new content.</p>
 <p>Unfortunately, whilst there are <a href="https://www.w3.org/TR/css-page-3/">W3C standards</a> on paged media, adoption by browsers has not been adequate to date. High quality paid alternatives exist in <a href="https://www.princexml.com">PrinceXML</a>, but a native, free solution has been missing.</p>
