--- a/index.html
+++ b/index.html
@@ -1,31 +1,6 @@
 <html>
 <head>
 	<title>Beautiful PDFs from HTML</title>
-
- 	<!-- MathJax Configuration Settings -->
- 	<!--
-	  <script>
-	  window.MathJax = {
-	    loader: { load: ['[tex]/ams'] },
-	    tex: { packages: {'[+]': ['ams']} },
-	    "fast-preview": { disabled: true },
-	    extensions: ["tex2jax.js", "asciimath2jax.js", "TeX/AMSmath.js", "TeX/AMSsymbols.js", "TeX/noErrors.js"],
-	    jax: ["input/TeX", "input/AsciiMath", "output/HTML-CSS"],
-	    displayAlign: "left",
-	    tex2jax: {
-	      inlineMath: [ ["\\(","\\)"] ],
-	      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-	      processEscapes: true
-	    }, 
-	    asciimath2jax: { delimiters: [['`','`']], preview: [""]},
-	    "HTML-CSS": { fonts: ["STIX"] }
-	  }
-	  </script>
-	-->
-  
-  <!-- Load MathJax for rendering Math. Configuration settings are above Note we use MathJax 2.7.7 and not the latest because we want to customise our font to STIX -->
-  <!-- <script type="text/javascript" sync src="MathJax-2.7.7/MathJax.js"></script> -->
-
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="toc.js"></script>
 
@@ -245,7 +220,17 @@ figcaption:not(.no-counter)::before {
 <h3 class="counter">MathJax Library</h3>
 <div class="math">
 <p>For a guide hosted on math.dev, it would be remiss of us not to discuss how to typeset math within our PDF framework.</p>
-<p>To begin with, MathJax is a high quality, popular library for rendering Math on the web.You can learn more about how to use MathJax from its website, but for now, we are interested in </p>
+<p>As you are likely aware, MathJax is a high quality, popular library for rendering Math on the web. MathJax can take some time to load and render, so I have commented out the necessary code to ensure this page loads fast. To use MathJax simply uncomment the following code blocks in this file (index.html):</p>
+
+<figure class="counter">
+	<figcaption>This code is added to the end of the file to parse the document</figcaption>
+  <code><pre>
+&lt;script&gt;
+	const math = document.getElementsByClassName("math");
+ 	MathJax.Hub.Queue(["Typeset",MathJax.Hub,math]);  
+&lt;/script&gt;
+</pre></code>
+</figure>
 
 \(\alpha \cap \beta = 3\)
 
@@ -253,6 +238,28 @@ figcaption:not(.no-counter)::before {
 
 
 </div>
+
+	  <script>
+	  window.MathJax = {
+	    loader: { load: ['[tex]/ams'] },
+	    tex: { packages: {'[+]': ['ams']} },
+	    "fast-preview": { disabled: true },
+	    extensions: ["tex2jax.js", "asciimath2jax.js", "TeX/AMSmath.js", "TeX/AMSsymbols.js", "TeX/noErrors.js"],
+	    jax: ["input/TeX", "input/AsciiMath", "output/HTML-CSS"],
+	    displayAlign: "left",
+	    tex2jax: {
+	      inlineMath: [ ["\\(","\\)"] ],
+	      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+	      processEscapes: true
+	    }, 
+	    asciimath2jax: { delimiters: [['`','`']], preview: [""]},
+	    "HTML-CSS": { fonts: ["STIX"] }
+	  }
+	  </script>
+	-->
+  
+  <!-- Load MathJax for rendering Math. Configuration settings are above Note we use MathJax 2.7.7 and not the latest because we want to customise our font to STIX -->
+  <!-- <script type="text/javascript" sync src="MathJax-2.7.7/MathJax.js"></script>
 
 <div class="page-break"></div>
 <!-- MathJax Script
