--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ figcaption:not(.no-counter)::before {
 
 </div>
 
-	  <script>
+<script>
 	  window.MathJax = {
 	    loader: { load: ['[tex]/ams'] },
 	    tex: { packages: {'[+]': ['ams']} },
@@ -255,11 +255,8 @@ figcaption:not(.no-counter)::before {
 	    asciimath2jax: { delimiters: [['`','`']], preview: [""]},
 	    "HTML-CSS": { fonts: ["STIX"] }
 	  }
-	  </script>
-	-->
-  
-  <!-- Load MathJax for rendering Math. Configuration settings are above Note we use MathJax 2.7.7 and not the latest because we want to customise our font to STIX -->
-  <!-- <script type="text/javascript" sync src="MathJax-2.7.7/MathJax.js"></script>
+</script>
+<script type="text/javascript" sync src="MathJax-2.7.7/MathJax.js"></script>
 
 <div class="page-break"></div>
 <!-- MathJax Script
