--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <!-- 1.0 Cover Page -->
 <div class="cover-page">
 	<h1>Beautiful PDFs from HTML</h1>
-	<h3 class="cover-header">An Example Repo by Ashok Khanna</h3>
-	<h3 class="cover-header">March 2021</h3>
+	<h3 class="cover-header no-counter">An Example Repo by Ashok Khanna</h3>
+	<h3 class="cover-header no-counter">March 2021</h3>
 </div>
 
 <!-- 2.0 Table of Contents -->
